--- a/docs/ensemble-learning.ipynb
+++ b/docs/ensemble-learning.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -21,9 +21,9 @@
      "output_type": "stream",
      "text": [
       "LogisticRegression score: 0.9166666666666666\n",
-      "RandomForest score: 0.9333333333333333\n",
+      "RandomForest score: 0.9166666666666666\n",
       "SVC score: 0.95\n",
-      "Ensemble Classifier (soft voting) score: 0.9333333333333333\n"
+      "Ensemble Classifier (soft voting) score: 0.9666666666666667\n"
      ]
     }
    ],
@@ -35,7 +35,6 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn import datasets\n",
     "from sklearn.metrics import accuracy_score\n",
-    "import numpy as np\n",
     "\n",
     "iris = datasets.load_iris()\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
@@ -43,7 +42,7 @@
     "\n",
     "logistic = LogisticRegression()\n",
     "rndforest = RandomForestClassifier()\n",
-    "svc = SVC(probability=True) # probability=True will add predict_proba() method needed for soft voting\n",
+    "svc = SVC(probability=True) # probability=True will add predict_proba() needed for soft voting\n",
     "\n",
     "classifiers = [('LogisticRegression', logistic), ('RandomForest', rndforest), ('SVC', svc)]\n",
     "\n",
@@ -73,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -85,7 +84,7 @@
      "output_type": "stream",
      "text": [
       "LogisticRegression score: 0.9166666666666666\n",
-      "RandomForest score: 0.9166666666666666\n",
+      "RandomForest score: 0.9\n",
       "SVC score: 0.95\n",
       "Ensemble Classifier (hard voting) score: 0.9666666666666667\n"
      ]
@@ -99,7 +98,6 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn import datasets\n",
     "from sklearn.metrics import accuracy_score\n",
-    "import numpy as np\n",
     "\n",
     "iris = datasets.load_iris()\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
@@ -127,6 +125,15 @@
     "print(\"Ensemble Classifier (hard voting) score: {}\".format(accuracy_score(y_test, y_pred)))\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
