--- a/personalized-medicine/data_exploration.ipynb
+++ b/personalized-medicine/data_exploration.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 71,
    "metadata": {
     "collapsed": false
    },
@@ -18,24 +18,61 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There are 264 distinct genes in the train set\n"
+      "train_var\n",
+      "Samples in test_var: (5668, 3)\n",
+      "Samples in train_var: (3321, 4)\n",
+      "Samples in test_text: (5668, 1)\n",
+      "Samples in train_text: (3321, 1)\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "train_var = pd.read_csv('/home/data/training_variants')\n",
+    "train_var.name = 'train_var'\n",
+    "\n",
+    "train_text = pd.read_csv('/home/data/training_text', sep='\\|\\|', engine='python')\n",
+    "train_text.name = 'train_text'\n",
+    "\n",
+    "test_var = pd.read_csv('/home/data/test_variants')\n",
+    "test_var.name = 'test_var'\n",
+    "\n",
+    "test_text = pd.read_csv('/home/data/test_text', sep='\\|\\|', engine='python')\n",
+    "test_text.name = 'test_text'\n",
+    "\n",
+    "dfs = {train_var.name: train_var,\n",
+    "       train_text.name: train_text,\n",
+    "       test_var.name: test_var,\n",
+    "       test_text.name: test_text}\n",
+    "\n",
+    "for name, df in dfs.items():\n",
+    "    print(\"Samples in {}: {}\".format(name, df.shape))\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f155cad9320>"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 264 distinct genes in the train set\n",
+      "<class 'pandas.core.series.Series'>\n"
+     ]
     },
     {
      "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYMAAAD8CAYAAACVZ8iyAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAEFZJREFUeJzt3X+MXWWdx/H3Z6koMCstsE7YtsmwsfFHaFxhgiiJmVrj\nAjWWPyTBsFpIk/7DKko3S/Ufkt1stiYoYrIhaYC1ZgldtpLQAP4ghYnxD4gWjQWroWIXBiqVgNVB\njDb73T/mdB2Gwbb33LmnM/N+Jc2c85znOc/z3LnTzz3nnnNvqgpJ0uL2F10PQJLUPcNAkmQYSJIM\nA0kShoEkCcNAksRxhEGSO5McSvLEtLKzkjyU5Knm57KmPEm+mmR/kh8nuWBamw1N/aeSbJib6UiS\nenE8RwZfAy6dUbYF2F1Vq4DdzTrAZcCq5t8m4DaYCg/gJuB9wEXATUcDRJLUvWOGQVV9F3hpRvF6\nYHuzvB24Ylr512vKo8DSJOcCfwc8VFUvVdXLwEO8PmAkSR1Z0mO74ao6CFBVB5O8rSlfDjw7rd5E\nU/ZG5X/WOeecUyMjIz0OsZ1XXnmFM844o5O+u+KcF77FNl9YnHPes2fPi1X1VyfSptcweCOZpaz+\nTPnrd5BsYuoUE8PDw9x88839G90JmJycZGhoqJO+u+KcF77FNl9YnHNes2bN/5xom17D4IUk5zZH\nBecCh5ryCWDltHorgOeb8rEZ5eOz7biqtgHbAEZHR2tsbGy2anNufHycrvruinNe+BbbfGFxzrkX\nvV5augs4ekXQBuC+aeWfaq4quhg43JxO+jbwkSTLmjeOP9KUSZJOAsc8MkhyN1Ov6s9JMsHUVUFb\ngXuSbASeAa5sqj8IXA7sB34HXAtQVS8l+Rfg+029f66qmW9KS5I6cswwqKpPvMGmtbPULeC6N9jP\nncCdJzQ6SdJAeAeyJMkwkCQZBpIkDANJEoaBJIn+34EsaQEb2fJAJ/0e2Lquk34XE48MJEmGgSTJ\nMJAkYRhIkjAMJEkYBpIkDANJEoaBJAnDQJKEYSBJwjCQJGEYSJIwDCRJGAaSJAwDSRKGgSQJw0CS\nhGEgScIwkCRhGEiSMAwkSRgGkiQMA0kShoEkCcNAkoRhIEnCMJAkYRhIkjAMJEm0DIMkn0vyZJIn\nktyd5C1JzkvyWJKnkvxXklObum9u1vc320f6MQFJUns9h0GS5cBngNGqOh84BbgK+CJwS1WtAl4G\nNjZNNgIvV9XbgVuaepKkk0Db00RLgNOSLAFOBw4CHwJ2Ntu3A1c0y+ubdZrta5OkZf+SpD5IVfXe\nOLke+FfgVeA7wPXAo82rf5KsBL5ZVecneQK4tKommm0/B95XVS/O2OcmYBPA8PDwhTt27Oh5fG1M\nTk4yNDTUSd9dcc4LX9v57n3ucB9Hc/xWLz+z57aL7XcMsGbNmj1VNXoibZb02lmSZUy92j8P+DXw\n38Bls1Q9mjazHQW8LomqahuwDWB0dLTGxsZ6HWIr4+PjdNV3V5zzwtd2vtdseaB/gzkBB64e67nt\nYvsd96rNaaIPA7+oql9V1R+Be4EPAEub00YAK4Dnm+UJYCVAs/1M4KUW/UuS+qRNGDwDXJzk9Obc\n/1rgJ8AjwMebOhuA+5rlXc06zfaHq805KklS3/QcBlX1GFNvBD8O7G32tQ24EbghyX7gbOCOpskd\nwNlN+Q3AlhbjliT1Uc/vGQBU1U3ATTOKnwYumqXu74Er2/QnSZob3oEsSTIMJEmGgSQJw0CShGEg\nScIwkCRhGEiSMAwkSRgGkiQMA0kShoEkCcNAkoRhIEnCMJAkYRhIkjAMJEkYBpIkDANJEoaBJImW\n34EsdW1kywOt2m9efYRretzHga3rWvUtnUw8MpAkGQaSJMNAkoRhIEnCMJAkYRhIkjAMJEkYBpIk\nDANJEoaBJAnDQJKEYSBJwjCQJGEYSJJoGQZJlibZmeSnSfYleX+Ss5I8lOSp5ueypm6SfDXJ/iQ/\nTnJBf6YgSWqr7ZHBrcC3quqdwHuAfcAWYHdVrQJ2N+sAlwGrmn+bgNta9i1J6pOewyDJW4EPAncA\nVNUfqurXwHpge1NtO3BFs7we+HpNeRRYmuTcnkcuSeqbVFVvDZO/BbYBP2HqqGAPcD3wXFUtnVbv\n5apaluR+YGtVfa8p3w3cWFU/mLHfTUwdOTA8PHzhjh07ehpfW5OTkwwNDXXSd1fm45z3Pne4Vfvh\n0+CFV3tru3r5ma367kLb33Hbx7tXbR7r+fi8bmvNmjV7qmr0RNq0+drLJcAFwKer6rEkt/KnU0Kz\nySxlr0uiqtrGVMgwOjpaY2NjLYbYu/Hxcbrquyvzcc69fmXlUZtXH+FLe3v7Mzhw9VirvrvQ9nfc\n9vHuVZvHej4+r7vQ5j2DCWCiqh5r1ncyFQ4vHD390/w8NK3+ymntVwDPt+hfktQnPYdBVf0SeDbJ\nO5qitUydMtoFbGjKNgD3Ncu7gE81VxVdDByuqoO99i9J6p82p4kAPg3cleRU4GngWqYC5p4kG4Fn\ngCubug8ClwP7gd81dSVJJ4FWYVBVPwJme5Ni7Sx1C7iuTX+SpLnhHciSpNaniTSLka6uuNi6rpN+\nJc1/HhlIkgwDSZJhIEnCMJAkYRhIkjAMJEkYBpIkDANJEoaBJAnDQJKEYSBJwjCQJGEYSJIwDCRJ\nGAaSJAwDSRKGgSQJw0CShGEgScIwkCRhGEiSMAwkSRgGkiQMA0kShoEkCVjS9QDUPyNbHmjVfvPq\nI1zT4z4ObF3Xqm9J3fLIQJJkGEiSDANJEoaBJAnDQJKEYSBJwjCQJNGHMEhySpIfJrm/WT8vyWNJ\nnkryX0lObcrf3Kzvb7aPtO1bktQf/TgyuB7YN239i8AtVbUKeBnY2JRvBF6uqrcDtzT1JEkngVZh\nkGQFsA64vVkP8CFgZ1NlO3BFs7y+WafZvrapL0nqWKqq98bJTuDfgL8E/hG4Bni0efVPkpXAN6vq\n/CRPAJdW1USz7efA+6rqxRn73ARsAhgeHr5wx44dPY+vjcnJSYaGhnpqu/e5w30ezWAMnwYvvNpb\n29XLz+zvYI5T28d6Ps65jTbPa+juud3msW475/lozZo1e6pq9ETa9PzZREk+Chyqqj1Jxo4Wz1K1\njmPbnwqqtgHbAEZHR2tsbGxmlYEYHx+n1757/Xyfrm1efYQv7e3tKXHg6rH+DuY4tX2s5+Oc22jz\nvIbuntttHuu2c14s2nxQ3SXAx5JcDrwFeCvwFWBpkiVVdQRYATzf1J8AVgITSZYAZwIvtehfktQn\nPb9nUFWfr6oVVTUCXAU8XFVXA48AH2+qbQDua5Z3Nes02x+uNueoJEl9Mxf3GdwI3JBkP3A2cEdT\nfgdwdlN+A7BlDvqWJPWgL99nUFXjwHiz/DRw0Sx1fg9c2Y/+JEn95R3IkiTDQJJkGEiSMAwkSRgG\nkiQMA0kShoEkCcNAkoRhIEnCMJAkYRhIkjAMJEkYBpIkDANJEoaBJAnDQJKEYSBJwjCQJGEYSJIw\nDCRJGAaSJGBJ1wOQdGJGtjzQc9vNq49wTYv2Wrg8MpAkGQaSJMNAkoRhIEnCMJAkYRhIkvDSUqln\nbS7xlE42HhlIkgwDSZJhIEnCMJAkYRhIkmgRBklWJnkkyb4kTya5vik/K8lDSZ5qfi5rypPkq0n2\nJ/lxkgv6NQlJUjttjgyOAJur6l3AxcB1Sd4NbAF2V9UqYHezDnAZsKr5twm4rUXfkqQ+6jkMqupg\nVT3eLP8W2AcsB9YD25tq24ErmuX1wNdryqPA0iTn9jxySVLfpKra7yQZAb4LnA88U1VLp217uaqW\nJbkf2FpV32vKdwM3VtUPZuxrE1NHDgwPD1+4Y8eO1uPrxeTkJENDQz213fvc4T6PZjCGT4MXXu2t\n7erlZ/Z3MMep7WPdZs7z0Xydb5vnV5u/5flqzZo1e6pq9ETatL4DOckQ8A3gs1X1myRvWHWWstcl\nUVVtA7YBjI6O1tjYWNsh9mR8fJxe+56vXx6yefURvrS3t6fEgavH+juY49T2sW4z5/lovs63zfOr\nzd/yYtLqaqIkb2IqCO6qqnub4heOnv5pfh5qyieAldOarwCeb9O/JKk/2lxNFOAOYF9VfXnapl3A\nhmZ5A3DftPJPNVcVXQwcrqqDvfYvSeqfNseLlwCfBPYm+VFT9gVgK3BPko3AM8CVzbYHgcuB/cDv\ngGtb9C1J6qOew6B5I/iN3iBYO0v9Aq7rtT9J0tzxDmRJkmEgSTIMJEkYBpIkDANJEoaBJAnDQJKE\nYSBJwjCQJGEYSJIwDCRJGAaSJAwDSRKGgSQJw0CShGEgScIwkCRhGEiSaPcdyNL/G9nyQNdDkNSC\nRwaSJMNAkmQYSJIwDCRJGAaSJAwDSRKGgSQJw0CShGEgScIwkCRhGEiS8LOJJOkNdfmZWwe2rhto\nfx4ZSJIMA0mSYSBJooP3DJJcCtwKnALcXlVbBz0GSfNLm3P3m1cf4Rq/b+OYBnpkkOQU4N+By4B3\nA59I8u5BjkGS9HqDPk10EbC/qp6uqj8AO4D1Ax6DJGmGQYfBcuDZaesTTZkkqUODfs8gs5TVayok\nm4BNzepkkp/N+ahmdw7wYkd9d+IzznnBW2zzhfk753yxVfN3nGiDQYfBBLBy2voK4PnpFapqG7Bt\nkIOaTZIfVNVo1+MYJOe88C22+cLinfOJthn0aaLvA6uSnJfkVOAqYNeAxyBJmmGgRwZVdSTJPwDf\nZurS0jur6slBjkGS9HoDv8+gqh4EHhx0vz3o/FRVB5zzwrfY5gvO+bikqo5dS5K0oPlxFJIkw2Cm\nJJcm+VmS/Um2dD2euZZkZZJHkuxL8mSS67se06AkOSXJD5Pc3/VYBiHJ0iQ7k/y0+X2/v+sxzbUk\nn2ue108kuTvJW7oeU78luTPJoSRPTCs7K8lDSZ5qfi471n4Mg2kW6cdlHAE2V9W7gIuB6xbBnI+6\nHtjX9SAG6FbgW1X1TuA9LPC5J1kOfAYYrarzmbpo5apuRzUnvgZcOqNsC7C7qlYBu5v1P8sweK1F\n93EZVXWwqh5vln/L1H8QC/6u8CQrgHXA7V2PZRCSvBX4IHAHQFX9oap+3e2oBmIJcFqSJcDpzLiv\naSGoqu8CL80oXg9sb5a3A1ccaz+GwWst6o/LSDICvBd4rNuRDMRXgH8C/rfrgQzI3wC/Av6jOTV2\ne5Izuh7UXKqq54CbgWeAg8DhqvpOt6MamOGqOghTL/iAtx2rgWHwWsf8uIyFKskQ8A3gs1X1m67H\nM5eSfBQ4VFV7uh7LAC0BLgBuq6r3Aq9wHKcO5rPmPPl64Dzgr4Ezkvx9t6M6eRkGr3XMj8tYiJK8\niakguKuq7u16PANwCfCxJAeYOhX4oST/2e2Q5twEMFFVR4/6djIVDgvZh4FfVNWvquqPwL3ABzoe\n06C8kORcgObnoWM1MAxea9F9XEaSMHUeeV9Vfbnr8QxCVX2+qlZU1QhTv+OHq2pBv2Ksql8CzyY5\n+gFma4GfdDikQXgGuDjJ6c3zfC0L/E3zaXYBG5rlDcB9x2ow8DuQT2aL9OMyLgE+CexN8qOm7AvN\nneJaWD4N3NW80HkauLbj8cypqnosyU7gcaaumvshC/Bu5CR3A2PAOUkmgJuArcA9STYyFYpXHnM/\n3oEsSfI0kSTJMJAkGQaSJAwDSRKGgSQJw0CShGEgScIwkCQB/wcW9YeElH/sqgAAAABJRU5ErkJg\ngg==\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x7f155c913940>"
+       "<matplotlib.figure.Figure at 0x7f155c7e2a20>"
       ]
      },
      "metadata": {},
@@ -43,10 +80,7 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
     "\n",
-    "df = pd.read_csv('/home/data/training_variants')\n",
     "\n",
     "agg_funcs = {\n",
     "    'Variation': ['count']\n",
@@ -58,7 +92,7 @@
     "print(\"There are {} distinct genes in the train set\".format(len(x)))\n",
     "\n",
     "df['Class'].hist(bins=np.arange(11)-0.5)\n",
-    "\n"
+    "print(type(df['Class']))"
    ]
   },
   {
