--- a/neural_networks/simple_nn_model.ipynb
+++ b/neural_networks/simple_nn_model.ipynb
@@ -20,13 +20,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def initialize_parameters():\n",
+    "def random_initialization(layer_dims):\n",
+    "    \"\"\"\n",
+    "    Arguments:\n",
+    "    layer_dims -- list with the dimensions of each layer in our network\n",
+    "    \n",
+    "    Performs random initialization for the weight matrices and zero initialization for biases.\n",
+    "    \n",
+    "    Returns:\n",
+    "    parameters -- python dictionary containing your parameters \"W1\", \"b1\", ..., \"WL\", \"bL\":\n",
+    "                    Wl -- weight matrix of shape (layer_dims[l], layer_dims[l-1])\n",
+    "                    bl -- bias vector of shape (layer_dims[l], 1)\n",
+    "    \"\"\"\n",
+    "    np.random.seed(3)\n",
+    "    parameters = {}\n",
+    "    L = len(layer_dims)\n",
+    "\n",
+    "    for l in range(1, L):\n",
+    "        parameters['W' + str(l)] = np.random.randn(layer_dims[l], layer_dims[l - 1]) * 0.01\n",
+    "        parameters['b' + str(l)] = np.zeros((layer_dims[l], 1))\n",
+    "        \n",
+    "        assert(parameters['W' + str(l)].shape == (layer_dims[l], layer_dims[l-1]))\n",
+    "        assert(parameters['b' + str(l)].shape == (layer_dims[l], 1))\n",
+    "\n",
+    "    return parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def xavier_initialization(layer_dims):\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def he_initialization(layer_dims):\n",
     "    pass"
    ]
   },
@@ -47,14 +93,14 @@
    "source": [
     "def get_L2_regularization_cost(parameters, lambd):\n",
     "    \"\"\"\n",
-    "    Return L2 regularization.\n",
+    "    Return L2 regularization term.\n",
     "    \n",
     "    Arguments:\n",
     "    parameters -- python dictionary containing parameters of the model\n",
     "    lambd -- regularization hyperparameter, scalar\n",
     "\n",
     "    Returns:\n",
-    "    cost - value of the regularization term for regularization of a cost function\n",
+    "    cost - value of the regularization term to be used for cost function regularization\n",
     "    \"\"\"\n",
     "    m = Y.shape[1]\n",
     "    W1 = parameters[\"W1\"]\n",
@@ -145,7 +191,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def relu(z):\n",
+    "    return \"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def sigmoid(z):\n",
+    "    return \"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def linear_activation_forward(A_prev, W, b, activation):\n",
+    "    \"\"\"\n",
+    "    Implement the forward propagation for the LINEAR->ACTIVATION layer\n",
+    "\n",
+    "    Arguments:\n",
+    "    A_prev -- activations from previous layer (or input data): (size of previous layer, number of examples)\n",
+    "    W -- weights matrix: numpy array of shape (size of current layer, size of previous layer)\n",
+    "    b -- bias vector, numpy array of shape (size of the current layer, 1)\n",
+    "    activation -- the activation to be used in this layer, stored as a text string: \"sigmoid\" or \"relu\"\n",
+    "\n",
+    "    Returns:\n",
+    "    A -- the output of the activation function, also called the post-activation value \n",
+    "    cache -- a python dictionary containing \"linear_cache\" and \"activation_cache\";\n",
+    "             stored for computing the backward pass efficiently\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    if activation == \"sigmoid\":\n",
+    "        Z, linear_cache = linear_forward(A_prev, W, b)\n",
+    "        A, activation_cache = sigmoid(Z)\n",
+    "    elif activation == \"relu\":\n",
+    "        Z, linear_cache = linear_forward(A_prev, W, b)\n",
+    "        A, activation_cache = relu(Z)\n",
+    "    else:\n",
+    "        raise Error(\"Activation function \" + activation + \" is not supported.\")\n",
+    "    \n",
+    "    assert (A.shape == (W.shape[0], A_prev.shape[1]))\n",
+    "    cache = (linear_cache, activation_cache)\n",
+    "\n",
+    "    return A, cache"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def L_model_forward(X, parameters):\n",
+    "    \"\"\"\n",
+    "    Implement forward propagation for the [LINEAR->RELU]*(L-1)->LINEAR->SIGMOID computation\n",
+    "    \n",
+    "    Arguments:\n",
+    "    X -- data, numpy array of shape (input size, number of examples)\n",
+    "    parameters -- output of initialize_parameters_deep()\n",
+    "    \n",
+    "    Returns:\n",
+    "    AL -- last post-activation value\n",
+    "    caches -- list of caches containing:\n",
+    "                every cache of linear_relu_forward() (there are L-1 of them, indexed from 0 to L-2)\n",
+    "                the cache of linear_sigmoid_forward() (there is one, indexed L-1)\n",
+    "    \"\"\"\n",
+    "\n",
+    "    caches = []\n",
+    "    A = X\n",
+    "    L = len(parameters) // 2 # of layers in the network\n",
+    "    \n",
+    "    # Implement [LINEAR -> RELU]*(L-1)\n",
+    "    for l in range(1, L):\n",
+    "        A_prev = A \n",
+    "        A, cache = linear_activation_forward(A_prev, parameters[\"W\"+str(l)], parameters[\"b\"+str(l)], \"relu\")\n",
+    "        caches.append(cache)\n",
+    "    \n",
+    "    # Implement LINEAR -> SIGMOID\n",
+    "    AL, cache = linear_activation_forward(A, parameters[\"W\"+str(L)], parameters[\"b\"+str(L)], \"sigmoid\")\n",
+    "    caches.append(cache)\n",
+    "    \n",
+    "    assert(AL.shape == (1,X.shape[1]))\n",
+    "            \n",
+    "    return AL, caches"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {
     "collapsed": true
    },
@@ -170,24 +321,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "expected = 1.60250160476\n",
-      "computed = 1.60250160476\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# Test compute_cost()\n",
     "A_last = np.array([[0.40682402, 0.01629284, 0.16722898, 0.10118111, 0.40682402]])\n",
     "Y = np.array([[1, 1, 0, 1, 0]])\n",
     "\n",
-    "print(\"expected = 1.60250160476\")\n",
-    "print(\"computed = \" + str(compute_cost(A_last, Y)))"
+    "assert(compute_cost(A_last, Y) - 1.60250160476 < 10e-5)"
    ]
   },
   {
@@ -217,8 +359,35 @@
    },
    "outputs": [],
    "source": [
-    "def model(X, Y, mini_batch_size = 64, seed = 0):\n",
-    "    pass"
+    "def nn_model(X, Y, n_h, layers_dims, learning_rate = 0.0075, num_iterations = 100, mini_batch_size = 64,\n",
+    "             seed = 0, print_cost=False):\n",
+    "    \"\"\"\n",
+    "    Implements a L-layer neural network: [LINEAR->RELU]*(L-1)->LINEAR->SIGMOID.\n",
+    "    \"\"\"\n",
+    "    n_x = X.shape[0]\n",
+    "    n_y = Y.shape[0]\n",
+    "    n_h = 4\n",
+    "    \n",
+    "    np.random.seed(1)\n",
+    "    costs = []\n",
+    "\n",
+    "    parameters = random_initialization(layers_dims)\n",
+    "\n",
+    "    for i in range(0, num_iterations):\n",
+    "        A_last, cache = L_model_forward(X, parameters)\n",
+    "        cost = compute_cost(A_last, Y)\n",
+    "        grads = L_model_backward(A_last, Y, caches)\n",
+    "        parameters = update_parameters(parameters, grads, learning_rate)\n",
+    "                \n",
+    "        # Print cost\n",
+    "        if print_cost and i % 100 == 0:\n",
+    "            print (\"Cost after iteration %i: %f\" %(i, cost))\n",
+    "        if print_cost and i % 100 == 0:\n",
+    "            costs.append(cost)\n",
+    "        if print_cost and i % 1000 == 0:\n",
+    "            print (\"Cost after iteration %i: %f\" %(i, cost))\n",
+    "\n",
+    "    return parameters"
    ]
   }
  ],
