--- a/neural_networks/simple_nn_model.ipynb
+++ b/neural_networks/simple_nn_model.ipynb
@@ -191,26 +191,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def relu(z):\n",
-    "    return \"\""
+    "    x = np.array(z, copy=True)\n",
+    "    np.maximum(x, 0, x) # modifies x in place\n",
+    "    return x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "relu([0, 2]) = [0 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test relu\n",
+    "print (\"relu([0, 2]) = \" + str(relu(np.array([0,2]))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def sigmoid(z):\n",
-    "    return \"\""
+    "    return  1.0 / (1 + np.exp(-z))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sigmoid([0, 2]) = [ 0.5         0.88079708]\n",
+      "exptected: [ 0.5 0.88079708]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test sigmoid\n",
+    "print(\"sigmoid([0, 2]) = \" + str(sigmoid(np.array([0,2]))))\n",
+    "print(\"exptected: [ 0.5 0.88079708]\") "
    ]
   },
   {
