--- a/neural_networks/simple_nn_model.ipynb
+++ b/neural_networks/simple_nn_model.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 67,
    "metadata": {
     "collapsed": true
    },
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {
     "collapsed": true
    },
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {
     "collapsed": true
    },
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {
     "collapsed": true
    },
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 71,
    "metadata": {
     "collapsed": true
    },
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {
     "collapsed": true
    },
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 73,
    "metadata": {
     "collapsed": true
    },
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 75,
    "metadata": {
     "collapsed": true
    },
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {
     "collapsed": true
    },
@@ -294,13 +294,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 78,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def L_model_forward(X, parameters):\n",
+    "def forward_propagation(X, parameters):\n",
     "    \"\"\"\n",
     "    Implement forward propagation for the [LINEAR->RELU]*(L-1)->LINEAR->SIGMOID computation\n",
     "    \n",
@@ -321,8 +321,9 @@
     "    \n",
     "    # Implement [LINEAR -> RELU]*(L-1)\n",
     "    for l in range(1, L):\n",
-    "        A_prev = A \n",
-    "        A, cache = linear_activation_forward(A_prev, parameters[\"W\"+str(l)], parameters[\"b\"+str(l)], \"relu\")\n",
+    "        A_prev = A\n",
+    "        j = str(l + 1)\n",
+    "        A, cache = linear_activation_forward(A_prev, parameters[\"W\"+j], parameters[\"b\"+j], \"relu\")\n",
     "        caches.append(cache)\n",
     "    \n",
     "    # Implement LINEAR -> SIGMOID\n",
@@ -336,7 +337,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 79,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def linear_backward(dZ, cache):\n",
+    "    \"\"\"\n",
+    "    Implement the linear portion of backward propagation for a single layer (layer l)\n",
+    "\n",
+    "    Arguments:\n",
+    "    dZ -- Gradient of the cost with respect to the linear output (of current layer l)\n",
+    "    cache -- tuple of values (A_prev, W, b) coming from the forward propagation in the current layer\n",
+    "\n",
+    "    Returns:\n",
+    "    dA_prev -- Gradient of the cost with respect to the activation (of the previous layer l-1), same shape as A_prev\n",
+    "    dW -- Gradient of the cost with respect to W (current layer l), same shape as W\n",
+    "    db -- Gradient of the cost with respect to b (current layer l), same shape as b\n",
+    "    \"\"\"\n",
+    "    A_prev, W, b = cache\n",
+    "    m = A_prev.shape[1]\n",
+    "\n",
+    "    dW = 1/m * np.dot(dZ, A_prev.T)\n",
+    "    db = 1/m * np.sum(dZ, axis=1, keepdims=True)\n",
+    "    dA_prev = np.dot(W.T, dZ)\n",
+    "    \n",
+    "    assert (dA_prev.shape == A_prev.shape)\n",
+    "    assert (dW.shape == W.shape)\n",
+    "    assert (db.shape == b.shape)\n",
+    "    \n",
+    "    return dA_prev, dW, db"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def linear_activation_backward(dA, cache, activation):\n",
+    "    \"\"\"\n",
+    "    Implement the backward propagation for the LINEAR->ACTIVATION layer.\n",
+    "    \n",
+    "    Arguments:\n",
+    "    dA -- post-activation gradient for current layer l \n",
+    "    cache -- tuple of values (linear_cache, activation_cache) we store for computing backward propagation efficiently\n",
+    "    activation -- the activation to be used in this layer, stored as a text string: \"sigmoid\" or \"relu\"\n",
+    "    \n",
+    "    Returns:\n",
+    "    dA_prev -- Gradient of the cost with respect to the activation (of the previous layer l-1), same shape as A_prev\n",
+    "    dW -- Gradient of the cost with respect to W (current layer l), same shape as W\n",
+    "    db -- Gradient of the cost with respect to b (current layer l), same shape as b\n",
+    "    \"\"\"\n",
+    "    linear_cache, activation_cache = cache\n",
+    "    \n",
+    "    if activation == \"relu\":\n",
+    "        dZ = relu_backward(dA, activation_cache)\n",
+    "    elif activation == \"sigmoid\":\n",
+    "        dZ = sigmoid_backward(dA, activation_cache)\n",
+    "    else:\n",
+    "        raise Error(\"Activation function \" + activation + \" is not supported.\")      \n",
+    "    \n",
+    "    dA_prev, dW, db = linear_backward(dZ, linear_cache)\n",
+    "\n",
+    "    return dA_prev, dW, db"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def backward_propagation(AL, Y, caches):\n",
+    "    \"\"\"\n",
+    "    Implement the backward propagation for the [LINEAR->RELU] * (L-1) -> LINEAR -> SIGMOID group\n",
+    "    \n",
+    "    Arguments:\n",
+    "    AL -- probability vector, output of the forward propagation\n",
+    "    Y -- true \"label\" vector (containing 0 if non-cat, 1 if cat)\n",
+    "    caches -- list of caches containing:\n",
+    "                every cache of linear_activation_forward() with \"relu\" (it's caches[l], for l in range(L-1) i.e l = 0...L-2)\n",
+    "                the cache of linear_activation_forward() with \"sigmoid\" (it's caches[L-1])\n",
+    "    \n",
+    "    Returns:\n",
+    "    grads -- A dictionary with the gradients\n",
+    "             grads[\"dA\" + str(l)] = ... \n",
+    "             grads[\"dW\" + str(l)] = ...\n",
+    "             grads[\"db\" + str(l)] = ... \n",
+    "    \"\"\"\n",
+    "    grads = {}\n",
+    "    L = len(caches) # the number of layers\n",
+    "    m = AL.shape[1]\n",
+    "    Y = Y.reshape(AL.shape) # after this line, Y is the same shape as AL\n",
+    "    \n",
+    "    # Initializing the backpropagation\n",
+    "    dAL = - (np.divide(Y, AL) - np.divide(1 - Y, 1 - AL))\n",
+    "    \n",
+    "    # Lth layer (SIGMOID -> LINEAR) gradients.\n",
+    "    current_cache = caches[L-1]\n",
+    "    grads[\"dA\" + str(L)], grads[\"dW\" + str(L)], grads[\"db\" + str(L)] = \\\n",
+    "        linear_activation_backward(dAL, current_cache, \"sigmoid\")\n",
+    "    \n",
+    "    for l in reversed(range(L-1)):\n",
+    "        j = str(l + 1)\n",
+    "        # lth layer: (RELU -> LINEAR) gradients.\n",
+    "        current_cache = caches[l]\n",
+    "        grads[\"dA\" + j], grads[\"dW\" + j], grads[\"db\" + j] = \\\n",
+    "            linear_activation_backward(grads[\"dA\" + str(L)], current_cache, \"relu\")\n",
+    "\n",
+    "    return grads"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
    "metadata": {
     "collapsed": true
    },
@@ -354,14 +474,16 @@
     "    cost - value of the loss function\n",
     "    \"\"\"\n",
     "    m = Y.shape[1]\n",
-    "    cost = - 1.0 / m * np.sum((np.multiply(np.log(A_last), Y) + np.multiply(np.log(1 - A_last), 1 - Y)))\n",
+    "    logprobs = np.multiply(np.log(A_last), Y) + np.multiply(np.log(1 - A_last), 1 - Y)\n",
+    "    cost = - 1.0 / m * np.sum(logprobs)\n",
     "    \n",
+    "    cost = np.squeeze(cost)\n",
     "    return cost"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,14 +496,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def gradient_descent(X, Y, seed = 0):\n",
-    "    pass"
+    "def update_parameters(parameters, grads, learning_rate):\n",
+    "    \"\"\"\n",
+    "    Update parameters using gradient descent\n",
+    "    \"\"\"\n",
+    "    L = len(parameters) // 2 # number of layers in the neural network\n",
+    "\n",
+    "    for l in range(L):\n",
+    "        parameters[\"W\" + str(l+1)] = parameters[\"W\" + str(l+1)] - learning_rate * grads[\"dW\" + str(l+1)] \n",
+    "        parameters[\"b\" + str(l+1)] = parameters[\"b\" + str(l+1)] - learning_rate * grads[\"db\" + str(l+1)]\n",
+    "        \n",
+    "    return parameters"
    ]
   },
   {
@@ -393,14 +524,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def nn_model(X, Y, n_h, layers_dims, learning_rate = 0.0075, num_iterations = 100, mini_batch_size = 64,\n",
-    "             seed = 0, print_cost=False):\n",
+    "def nn_model(X, Y, n_h, layers_dims, learning_rate=0.0075, num_iterations=1000, mini_batch_size=64,\n",
+    "             seed=0, print_cost=False):\n",
     "    \"\"\"\n",
     "    Implements a L-layer neural network: [LINEAR->RELU]*(L-1)->LINEAR->SIGMOID.\n",
     "    \"\"\"\n",
@@ -414,20 +545,37 @@
     "    parameters = random_initialization(layers_dims)\n",
     "\n",
     "    for i in range(0, num_iterations):\n",
-    "        A_last, cache = L_model_forward(X, parameters)\n",
+    "        A_last, cache = forward_propagation(X, parameters)\n",
     "        cost = compute_cost(A_last, Y)\n",
-    "        grads = L_model_backward(A_last, Y, caches)\n",
+    "        grads = backward_propagation(A_last, Y, caches)\n",
     "        parameters = update_parameters(parameters, grads, learning_rate)\n",
     "                \n",
     "        # Print cost\n",
     "        if print_cost and i % 100 == 0:\n",
     "            print (\"Cost after iteration %i: %f\" %(i, cost))\n",
-    "        if print_cost and i % 100 == 0:\n",
     "            costs.append(cost)\n",
-    "        if print_cost and i % 1000 == 0:\n",
-    "            print (\"Cost after iteration %i: %f\" %(i, cost))\n",
     "\n",
+    "    # plot the cost\n",
+    "    plt.plot(np.squeeze(costs))\n",
+    "    plt.ylabel('cost')\n",
+    "    plt.xlabel('iterations (per tens)')\n",
+    "    plt.title(\"Learning rate =\" + str(learning_rate))\n",
+    "    plt.show()\n",
+    "    \n",
     "    return parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def predict(train_x, train_y, parameters):\n",
+    "    pass\n",
+    "    return Y_prediction"
    ]
   }
  ],
