--- a/neural_networks/simple_nn_model.ipynb
+++ b/neural_networks/simple_nn_model.ipynb
@@ -15,6 +15,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Examples of shapes:\n",
+    "* Wi -- weight matrix of shape (layers_dims[i], layers_dims[0])\n",
+    "* bi -- bias vector of shape (layers_dims[i], 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Initialization"
    ]
   },
@@ -28,15 +37,10 @@
    "source": [
     "def random_initialization(layer_dims):\n",
     "    \"\"\"\n",
-    "    Arguments:\n",
-    "    layer_dims -- list with the dimensions of each layer in our network\n",
-    "    \n",
     "    Performs random initialization for the weight matrices and zero initialization for biases.\n",
-    "    \n",
+    "    layer_dims -- list with the dimensions of each layer in our network\n",
     "    Returns:\n",
-    "    parameters -- python dictionary containing your parameters \"W1\", \"b1\", ..., \"WL\", \"bL\":\n",
-    "                    Wl -- weight matrix of shape (layer_dims[l], layer_dims[l-1])\n",
-    "                    bl -- bias vector of shape (layer_dims[l], 1)\n",
+    "    parameters -- python dictionary of parameters \"W1\", \"b1\", ..., \"WL\", \"bL\"\n",
     "    \"\"\"\n",
     "    np.random.seed(3)\n",
     "    parameters = {}\n",
@@ -72,8 +76,28 @@
    },
    "outputs": [],
    "source": [
-    "def he_initialization(layer_dims):\n",
-    "    pass"
+    "def he_initialization(layers_dims):\n",
+    "    \"\"\"\n",
+    "    Performs He initialization that adds a scaling factor sqrt(2./layers_dims[l-1])\n",
+    "    to the initialized params\n",
+    "\n",
+    "    layer_dims -- list of the size of each layer\n",
+    "    \n",
+    "    Returns:\n",
+    "    parameters -- python dictionary containing your parameters \"W1\", \"b1\", ..., \"WL\", \"bL\":\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    np.random.seed(3)\n",
+    "    parameters = {}\n",
+    "    L = len(layers_dims) - 1 # integer representing the number of layers\n",
+    "     \n",
+    "    for l in range(1, L + 1):\n",
+    "        ### START CODE HERE ### (≈ 2 lines of code)\n",
+    "        parameters['W' + str(l)] = np.random.randn(layers_dims[l], layers_dims[l-1]) * np.sqrt(2.0 / layers_dims[l-1])\n",
+    "        parameters['b' + str(l)] = np.zeros((layers_dims[l], 1))\n",
+    "        ### END CODE HERE ###\n",
+    "        \n",
+    "    return parameters"
    ]
   },
   {
