--- a/neural_networks/simple_nn_model.ipynb
+++ b/neural_networks/simple_nn_model.ipynb
@@ -29,6 +29,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def initialization(layer_dims, scaling_factor=1):\n",
+    "    \"\"\"\n",
+    "    Performs random initialization for the weight matrices and zero initialization for biases.\n",
+    "    layer_dims -- list with the dimensions of each layer in our network\n",
+    "    Returns:\n",
+    "    parameters -- dictionary with parameters\n",
+    "    \"\"\"\n",
+    "    np.random.seed(3)\n",
+    "    parameters = {}\n",
+    "    L = len(layer_dims)\n",
+    "\n",
+    "    for l in range(1, L):\n",
+    "        parameters['W' + str(l)] = np.random.randn(layer_dims[l], layer_dims[l - 1]) * scaling_factor\n",
+    "        parameters['b' + str(l)] = np.zeros((layer_dims[l], 1))\n",
+    "        \n",
+    "        assert(parameters['W' + str(l)].shape == (layer_dims[l], layer_dims[l-1]))\n",
+    "        assert(parameters['b' + str(l)].shape == (layer_dims[l], 1))\n",
+    "\n",
+    "    return parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 67,
    "metadata": {
     "collapsed": true
@@ -36,24 +65,7 @@
    "outputs": [],
    "source": [
     "def random_initialization(layer_dims):\n",
-    "    \"\"\"\n",
-    "    Performs random initialization for the weight matrices and zero initialization for biases.\n",
-    "    layer_dims -- list with the dimensions of each layer in our network\n",
-    "    Returns:\n",
-    "    parameters -- python dictionary of parameters \"W1\", \"b1\", ..., \"WL\", \"bL\"\n",
-    "    \"\"\"\n",
-    "    np.random.seed(3)\n",
-    "    parameters = {}\n",
-    "    L = len(layer_dims)\n",
-    "\n",
-    "    for l in range(1, L):\n",
-    "        parameters['W' + str(l)] = np.random.randn(layer_dims[l], layer_dims[l - 1]) * 0.01\n",
-    "        parameters['b' + str(l)] = np.zeros((layer_dims[l], 1))\n",
-    "        \n",
-    "        assert(parameters['W' + str(l)].shape == (layer_dims[l], layer_dims[l-1]))\n",
-    "        assert(parameters['b' + str(l)].shape == (layer_dims[l], 1))\n",
-    "\n",
-    "    return parameters"
+    "    return initialization(layer_dims, scaling_factor=0.01)"
    ]
   },
   {
@@ -65,12 +77,15 @@
    "outputs": [],
    "source": [
     "def xavier_initialization(layer_dims):\n",
-    "    pass"
+    "    \"\"\"\n",
+    "    Performs Xavier initialization that adds a scaling factor sqrt(1/prev_layer_dimension)\n",
+    "    \"\"\"\n",
+    "    return initialization(layer_dims, scaling_factor=np.sqrt(1.0 / layers_dims[l-1]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 87,
    "metadata": {
     "collapsed": true
    },
@@ -78,26 +93,9 @@
    "source": [
     "def he_initialization(layers_dims):\n",
     "    \"\"\"\n",
-    "    Performs He initialization that adds a scaling factor sqrt(2./layers_dims[l-1])\n",
-    "    to the initialized params\n",
-    "\n",
-    "    layer_dims -- list of the size of each layer\n",
-    "    \n",
-    "    Returns:\n",
-    "    parameters -- python dictionary containing your parameters \"W1\", \"b1\", ..., \"WL\", \"bL\":\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    np.random.seed(3)\n",
-    "    parameters = {}\n",
-    "    L = len(layers_dims) - 1 # integer representing the number of layers\n",
-    "     \n",
-    "    for l in range(1, L + 1):\n",
-    "        ### START CODE HERE ### (≈ 2 lines of code)\n",
-    "        parameters['W' + str(l)] = np.random.randn(layers_dims[l], layers_dims[l-1]) * np.sqrt(2.0 / layers_dims[l-1])\n",
-    "        parameters['b' + str(l)] = np.zeros((layers_dims[l], 1))\n",
-    "        ### END CODE HERE ###\n",
-    "        \n",
-    "    return parameters"
+    "    Performs He initialization that adds a scaling factor sqrt(2/prev_layer_dimension)\n",
+    "    \"\"\"  \n",
+    "    return initialization(layer_dims, scaling_factor=np.sqrt(2.0 / layers_dims[l-1]))"
    ]
   },
   {
@@ -548,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 86,
    "metadata": {
     "collapsed": true
    },
@@ -559,10 +557,6 @@
     "    \"\"\"\n",
     "    Implements a L-layer neural network: [LINEAR->RELU]*(L-1)->LINEAR->SIGMOID.\n",
     "    \"\"\"\n",
-    "    n_x = X.shape[0]\n",
-    "    n_y = Y.shape[0]\n",
-    "    n_h = 4\n",
-    "    \n",
     "    np.random.seed(1)\n",
     "    costs = []\n",
     "\n",
