--- a/neural_networks/simple_nn_model.ipynb
+++ b/neural_networks/simple_nn_model.ipynb
@@ -29,16 +29,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 143,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def initialization(layer_dims, scaling_factor=1):\n",
+    "def initialize_parameters(layer_dims, init_type='random'):\n",
     "    \"\"\"\n",
-    "    Performs random initialization for the weight matrices and zero initialization for biases.\n",
+    "    Performs a given initialization for the weight matrices and zero initialization for biases.\n",
     "    layer_dims -- list with the dimensions of each layer in our network\n",
+    "    init_type: either 'random', 'he', 'xavier'\n",
     "    Returns:\n",
     "    parameters -- dictionary with parameters\n",
     "    \"\"\"\n",
@@ -47,6 +48,15 @@
     "    L = len(layer_dims)\n",
     "\n",
     "    for l in range(1, L):\n",
+    "        if init_type == 'random':\n",
+    "            scaling_factor = 0.01\n",
+    "        elif init_type == 'he':\n",
+    "            scaling_factor = np.sqrt(2.0 / layer_dims[l-1])\n",
+    "        elif init_type == 'xavier':\n",
+    "            scaling_factor = np.sqrt(1.0 / layer_dims[l-1])\n",
+    "        else:\n",
+    "            raise Error(\"Initialization type \" + init_type + \" not supported\")\n",
+    "    \n",
     "        parameters['W' + str(l)] = np.random.randn(layer_dims[l], layer_dims[l - 1]) * scaling_factor\n",
     "        parameters['b' + str(l)] = np.zeros((layer_dims[l], 1))\n",
     "        \n",
@@ -58,19 +68,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 144,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def random_initialization(layer_dims):\n",
-    "    return initialization(layer_dims, scaling_factor=0.01)"
+    "    \"\"\"\n",
+    "    Performs random initialization with a scaling factor 0.01\n",
+    "    \"\"\"\n",
+    "    return initialize_parameters(layer_dims, init_type='random')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 145,
    "metadata": {
     "collapsed": true
    },
@@ -78,24 +91,66 @@
    "source": [
     "def xavier_initialization(layer_dims):\n",
     "    \"\"\"\n",
-    "    Performs Xavier initialization that adds a scaling factor sqrt(1/prev_layer_dimension)\n",
+    "    Performs Xavier initialization with a scaling factor sqrt(1/prev_layer_dimension)\n",
     "    \"\"\"\n",
-    "    return initialization(layer_dims, scaling_factor=np.sqrt(1.0 / layers_dims[l-1]))"
+    "    return initialize_parameters(layer_dims, init_type='xavier')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 146,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def he_initialization(layers_dims):\n",
+    "def he_initialization(layer_dims):\n",
     "    \"\"\"\n",
-    "    Performs He initialization that adds a scaling factor sqrt(2/prev_layer_dimension)\n",
+    "    Performs He initialization with a scaling factor sqrt(2/prev_layer_dimension)\n",
     "    \"\"\"  \n",
-    "    return initialization(layer_dims, scaling_factor=np.sqrt(2.0 / layers_dims[l-1]))"
+    "    return initialize_parameters(layer_dims, init_type='he')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parameters = initialize_parameters([2, 4, 1], init_type='he')\n",
+    "assert(parameters[\"W1\"][0][0] - 1.78862847 < 10e-8)\n",
+    "assert(parameters[\"W1\"][0][1] - 0.43650985 < 10e-8)\n",
+    "assert(parameters[\"b1\"][0][0] - 0.0 < 10e-8)\n",
+    "assert(parameters[\"W2\"][0][0] + 0.00043818 < 10e-8)\n",
+    "assert(parameters[\"b2\"][0][0] - 0.0 < 10e-8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parameters = initialize_parameters([2, 4, 1], init_type='xavier')\n",
+    "assert(parameters[\"W1\"][0][0] - 1.78862847 < 10e-8)\n",
+    "assert(parameters[\"W1\"][0][1] - 0.43650985 < 10e-8)\n",
+    "assert(parameters[\"b1\"][0][0] - 0.0 < 10e-8)\n",
+    "assert(parameters[\"W2\"][0][0] + 0.021909084488 < 10e-8)\n",
+    "assert(parameters[\"b2\"][0][0] - 0.0 < 10e-8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parameters = initialize_parameters([2, 4, 1])\n",
+    "assert(parameters[\"W1\"][0][0] - 1.78862847 < 10e-8)\n",
+    "assert(parameters[\"W1\"][0][1] - 0.43650985 < 10e-8)\n",
+    "assert(parameters[\"b1\"][0][0] - 0.0 < 10e-8)\n",
+    "assert(parameters[\"W2\"][0][0] - (-0.00043818) < 10e-8)\n",
+    "assert(parameters[\"b2\"][0][0] - 0.0 < 10e-8)"
    ]
   },
   {
@@ -291,7 +346,7 @@
     "    A_prev -- activations from previous layer (or input data): (size of previous layer, number of examples)\n",
     "    W -- weights matrix: numpy array of shape (size of current layer, size of previous layer)\n",
     "    b -- bias vector, numpy array of shape (size of the current layer, 1)\n",
-    "    activation -- the activation to be used in this layer, stored as a text string: \"sigmoid\" or \"relu\"\n",
+    "    activation -- the activation to be used in this layer: \"sigmoid\" or \"relu\"\n",
     "\n",
     "    Returns:\n",
     "    A -- the output of the activation function, also called the post-activation value \n",
@@ -324,31 +379,25 @@
    "source": [
     "def forward_propagation(X, parameters):\n",
     "    \"\"\"\n",
-    "    Implement forward propagation for the [LINEAR->RELU]*(L-1)->LINEAR->SIGMOID computation\n",
+    "    Implement forward propagation for the relu (hidden layers) and sigmoid (output layer) computation\n",
     "    \n",
     "    Arguments:\n",
     "    X -- data, numpy array of shape (input size, number of examples)\n",
-    "    parameters -- output of initialize_parameters_deep()\n",
+    "    parameters -- output of initialize_parameters()\n",
     "    \n",
     "    Returns:\n",
     "    AL -- last post-activation value\n",
-    "    caches -- list of caches containing:\n",
-    "                every cache of linear_relu_forward() (there are L-1 of them, indexed from 0 to L-2)\n",
-    "                the cache of linear_sigmoid_forward() (there is one, indexed L-1)\n",
+    "    caches -- list of caches output of linear_activation_forward() \n",
     "    \"\"\"\n",
     "\n",
     "    caches = []\n",
     "    A = X\n",
     "    L = len(parameters) // 2 # of layers in the network\n",
     "    \n",
-    "    # Implement [LINEAR -> RELU]*(L-1)\n",
     "    for l in range(1, L):\n",
     "        A_prev = A\n",
-    "        j = str(l + 1)\n",
-    "        A, cache = linear_activation_forward(A_prev, parameters[\"W\"+j], parameters[\"b\"+j], \"relu\")\n",
+    "        A, cache = linear_activation_forward(A_prev, parameters[\"W\"+str(l + 1)], parameters[\"b\"+str(l + 1)], \"relu\")\n",
     "        caches.append(cache)\n",
-    "    \n",
-    "    # Implement LINEAR -> SIGMOID\n",
     "    AL, cache = linear_activation_forward(A, parameters[\"W\"+str(L)], parameters[\"b\"+str(L)], \"sigmoid\")\n",
     "    caches.append(cache)\n",
     "    \n",
@@ -546,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 131,
    "metadata": {
     "collapsed": true
    },
@@ -555,15 +604,16 @@
     "def nn_model(X, Y, n_h, layers_dims, learning_rate=0.0075, num_iterations=1000, mini_batch_size=64,\n",
     "             seed=0, print_cost=False):\n",
     "    \"\"\"\n",
-    "    Implements a L-layer neural network: [LINEAR->RELU]*(L-1)->LINEAR->SIGMOID.\n",
+    "    Implements a neural network with relu activation function for the hidden layers and\n",
+    "    a sigmoid actication function for the output layer.\n",
     "    \"\"\"\n",
     "    np.random.seed(1)\n",
     "    costs = []\n",
     "\n",
-    "    parameters = random_initialization(layers_dims)\n",
+    "    parameters = initialize_parameters(layers_dims, init_type='random')\n",
     "\n",
     "    for i in range(0, num_iterations):\n",
-    "        A_last, cache = forward_propagation(X, parameters)\n",
+    "        A_last, caches = forward_propagation(X, parameters)\n",
     "        cost = compute_cost(A_last, Y)\n",
     "        grads = backward_propagation(A_last, Y, caches)\n",
     "        parameters = update_parameters(parameters, grads, learning_rate)\n",
