Test forward propagation

--- a/neural_networks/simple_nn_model.ipynb
+++ b/neural_networks/simple_nn_model.ipynb
@@ -16,8 +16,10 @@
    "metadata": {},
    "source": [
     "Examples of shapes:\n",
-    "* Wi -- weight matrix of shape (layers_dims[i], layers_dims[0])\n",
-    "* bi -- bias vector of shape (layers_dims[i], 1)"
+    "* Ai -- activations from a layer (layers_dims[i], num_examples)\n",
+    "* Wi -- weight matrix of shape (layers_dims[i], layers_dims[i-1])\n",
+    "* bi -- bias vector of shape (layers_dims[i], 1)\n",
+    "* X -- input data, numpy array of shape (input size, number of examples)"
    ]
   },
   {
@@ -268,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 180,
    "metadata": {
     "collapsed": true
    },
@@ -277,19 +279,19 @@
     "def relu(z):\n",
     "    x = np.array(z, copy=True)\n",
     "    np.maximum(x, 0, x) # modifies x in place\n",
-    "    return x"
+    "    return (x, z)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "relu([0, 2]) = [0 2]\n"
+      "relu([0, 2]) = (array([0, 2]), array([0, 2]))\n"
      ]
     }
    ],
@@ -300,26 +302,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 182,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def sigmoid(z):\n",
-    "    return  1.0 / (1 + np.exp(-z))"
+    "    return  (1.0 / (1 + np.exp(-z)), z)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sigmoid([0, 2]) = [ 0.5         0.88079708]\n",
+      "sigmoid([0, 2]) = (array([ 0.5       ,  0.88079708]), array([0, 2]))\n",
       "exptected: [ 0.5 0.88079708]\n"
      ]
     }
@@ -332,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 184,
    "metadata": {
     "collapsed": true
    },
@@ -340,25 +342,28 @@
    "source": [
     "def linear_activation_forward(A_prev, W, b, activation):\n",
     "    \"\"\"\n",
-    "    Implement the forward propagation for the LINEAR->ACTIVATION layer\n",
+    "    Implement the forward propagation with a linear step and an activation step, for one layer\n",
     "\n",
     "    Arguments:\n",
-    "    A_prev -- activations from previous layer (or input data): (size of previous layer, number of examples)\n",
-    "    W -- weights matrix: numpy array of shape (size of current layer, size of previous layer)\n",
-    "    b -- bias vector, numpy array of shape (size of the current layer, 1)\n",
+    "    A_prev -- activations from previous layer (or input data)\n",
+    "    W -- weights matrix\n",
+    "    b -- bias vector\n",
     "    activation -- the activation to be used in this layer: \"sigmoid\" or \"relu\"\n",
     "\n",
     "    Returns:\n",
-    "    A -- the output of the activation function, also called the post-activation value \n",
+    "    A -- the output of the activation function (post-activation value)\n",
     "    cache -- a python dictionary containing \"linear_cache\" and \"activation_cache\";\n",
     "             stored for computing the backward pass efficiently\n",
     "    \"\"\"\n",
     "    \n",
+    "    # Linear step\n",
+    "    Z = np.dot(W, A_prev) + b\n",
+    "    linear_cache = (A_prev, W, b)\n",
+    "    \n",
+    "    # Activation step\n",
     "    if activation == \"sigmoid\":\n",
-    "        Z, linear_cache = linear_forward(A_prev, W, b)\n",
     "        A, activation_cache = sigmoid(Z)\n",
     "    elif activation == \"relu\":\n",
-    "        Z, linear_cache = linear_forward(A_prev, W, b)\n",
     "        A, activation_cache = relu(Z)\n",
     "    else:\n",
     "        raise Error(\"Activation function \" + activation + \" is not supported.\")\n",
@@ -371,7 +376,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 209,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.99999996  0.99999969  1.        ]\n",
+      " [ 0.99966465  0.99987661  0.9999546 ]\n",
+      " [ 1.          1.          1.        ]\n",
+      " [ 0.99999989  0.99999998  1.        ]]\n",
+      "[[ 17.  15.  27.]\n",
+      " [  8.   9.  10.]\n",
+      " [ 21.  24.  27.]\n",
+      " [ 16.  18.  20.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test linear_activation_forward\n",
+    "A_prev = np.array([[ 4.,  7.,  3.], [ 2.,  0.,  5.]])\n",
+    "W = np.array([[ 2.,  4.], [ 1.,  1.], [ 3.,  3.], [ 2.,  2.]])\n",
+    "b = np.array([[ 1.], [ 2.], [ 3.], [ 4.]])\n",
+    "\n",
+    "A, _ = linear_activation_forward(A_prev, W, b, 'sigmoid')\n",
+    "A_expected = np.array(\n",
+    "[[ 0.99999996,  0.99999969,  1.        ],\n",
+    " [ 0.99966465,  0.99987661,  0.9999546 ],\n",
+    " [ 1.,          1.,          1.        ],\n",
+    " [ 0.99999989,  0.99999998,  1.        ]])\n",
+    "\n",
+    "print(A)\n",
+    "\n",
+    "A, _ = linear_activation_forward(A_prev, W, b, 'relu')\n",
+    "A_expected = np.array(\n",
+    "[[ 17.,  15.,  27.],\n",
+    " [  8.,   9.,  10.],\n",
+    " [ 21.,  24.,  27.],\n",
+    " [ 16.,  18.,  20.]])\n",
+    "\n",
+    "print(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 222,
    "metadata": {
     "collapsed": true
    },
@@ -382,7 +432,7 @@
     "    Implement forward propagation for the relu (hidden layers) and sigmoid (output layer) computation\n",
     "    \n",
     "    Arguments:\n",
-    "    X -- data, numpy array of shape (input size, number of examples)\n",
+    "    X -- data\n",
     "    parameters -- output of initialize_parameters()\n",
     "    \n",
     "    Returns:\n",
@@ -398,12 +448,42 @@
     "        A_prev = A\n",
     "        A, cache = linear_activation_forward(A_prev, parameters[\"W\"+str(l + 1)], parameters[\"b\"+str(l + 1)], \"relu\")\n",
     "        caches.append(cache)\n",
-    "    AL, cache = linear_activation_forward(A, parameters[\"W\"+str(L)], parameters[\"b\"+str(L)], \"sigmoid\")\n",
+    "\n",
+    "    A_last, cache = linear_activation_forward(A, parameters[\"W\"+str(L)], parameters[\"b\"+str(L)], \"sigmoid\")\n",
     "    caches.append(cache)\n",
-    "    \n",
-    "    assert(AL.shape == (1,X.shape[1]))\n",
+    "\n",
+    "    assert(A_last.shape == (1,X.shape[1]))\n",
     "            \n",
-    "    return AL, caches"
+    "    return A_last, caches"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 223,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A_last = [[ 0.52005806  0.53126017]]\n",
+      "Length of caches list = 1\n",
+      "expected A_last: [[ 0.52005806  0.53126017]]\n",
+      "expected caches list len: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test forward_propagation\n",
+    "X = np.array([[ 4.,  7.], [ 2.,  0.]])\n",
+    "parameters = initialize_parameters([2, 1])\n",
+    "\n",
+    "A_last, caches = forward_propagation(X, parameters)\n",
+    "print(\"A_last = \" + str(A_last))\n",
+    "print(\"Length of caches list = \" + str(len(caches)))\n",
+    "\n",
+    "print(\"expected A_last: [[ 0.52005806  0.53126017]]\")\n",
+    "print(\"expected caches list len: 1\")"
    ]
   },
   {
