--- a/neural_networks/simple_nn_model.ipynb
+++ b/neural_networks/simple_nn_model.ipynb
@@ -228,56 +228,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 271,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def relu(z):\n",
-    "    x = np.array(z, copy=True)\n",
-    "    np.maximum(x, 0, x) # modifies x in place\n",
-    "    return (x, z)"
+    "    tmp = np.array(z, copy=True)\n",
+    "    np.maximum(tmp, 0, tmp) # modifies x in place\n",
+    "    return (tmp, z)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 272,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def sigmoid(z):\n",
-    "    return  (1.0 / (1 + np.exp(-z)), z)"
+    "    return (1.0 / (1 + np.exp(-z)), z)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 273,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def sigmoid_backward(dA, cache):\n",
-    "    x = cache # cached sigmoid of Z\n",
-    "    dZ = dA * (x * (1 - dA))\n",
+    "    z = cache\n",
+    "    dZ = dA * (z * (1 - dA))\n",
     "    return dZ"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 274,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def relu_backward(dA, cache):\n",
-    "    dZ, x = None, cache\n",
+    "    dZ, z = None, cache\n",
     "    dZ = np.array(dA, copy=True)\n",
-    "    dZ[ x <= 0 ] = 0\n",
+    "    dZ[ z <= 0 ] = 0\n",
     "    return dZ"
    ]
   },
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 275,
    "metadata": {
     "collapsed": true
    },
@@ -341,7 +341,9 @@
     "    \n",
     "    Returns:\n",
     "    AL -- last post-activation value\n",
-    "    caches -- list of caches output of linear_activation_forward() \n",
+    "    caches -- list of 2-tuples storing caches output of linear_activation_forward(): [(A_prev, W, b), Z]\n",
+    "              first is linear_cache, which is a 3-tuple (A_prev, W, b)\n",
+    "              second is activation_cache, which is a Z array (input for the activation function)\n",
     "    \"\"\"\n",
     "\n",
     "    caches = []\n",
@@ -357,7 +359,7 @@
     "    caches.append(cache)\n",
     "\n",
     "    assert(A_last.shape == (1,X.shape[1]))\n",
-    "            \n",
+    "\n",
     "    return A_last, caches"
    ]
   },
@@ -418,8 +420,9 @@
     "    dW -- Gradient of the cost with respect to W (current layer l), same shape as W\n",
     "    db -- Gradient of the cost with respect to b (current layer l), same shape as b\n",
     "    \"\"\"\n",
-    "    linear_cache, activation_cache = cache\n",
+    "    linear_cache, activation_cache = cache # ((A_prev, W, b), Z)\n",
     "    \n",
+    "    # activation step\n",
     "    if activation == \"relu\":\n",
     "        dZ = relu_backward(dA, activation_cache)\n",
     "    elif activation == \"sigmoid\":\n",
@@ -427,6 +430,7 @@
     "    else:\n",
     "        raise Error(\"Activation function \" + activation + \" is not supported.\")      \n",
     "    \n",
+    "    # linear step\n",
     "    dA_prev, dW, db = linear_backward(dZ, linear_cache)\n",
     "\n",
     "    return dA_prev, dW, db"
@@ -442,14 +446,14 @@
    "source": [
     "def backward_propagation(A_last, Y, caches):\n",
     "    \"\"\"\n",
-    "    Implement the backward propagation for the [LINEAR->RELU] * (L-1) -> LINEAR -> SIGMOID group\n",
+    "    Compute gradients for the [LINEAR->RELU] * (L-1) -> LINEAR -> SIGMOID group\n",
     "    \n",
     "    Arguments:\n",
     "    A_last -- probability vector, output of the forward propagation\n",
     "    Y --  the ground truth vector \n",
     "    caches -- list of caches containing:\n",
     "                the caches of linear_activation_forward() with \"relu\" and \n",
-    "                the cache of linear_activation_forward() with \"sigmoid\"\n",
+    "                the cache of linear_activation_forward() with \"sigmoid\" (last cache in the list)\n",
     "    \n",
     "    Returns:\n",
     "    grads -- A dictionary with the gradients for each layer\n",
@@ -457,21 +461,18 @@
     "    grads = {}\n",
     "    L = len(caches)\n",
     "    m = A_last.shape[1]\n",
-    "    Y = Y.reshape(A_last.shape) # after this line, Y is the same shape as AL\n",
+    "    Y = Y.reshape(A_last.shape) # make Y the same shape as A_last\n",
     "    \n",
     "    # Initializing the backpropagation\n",
     "    dAL = - (np.divide(Y, A_last) - np.divide(1 - Y, 1 - A_last))\n",
     "    \n",
-    "    # Lth layer gradients.\n",
     "    current_cache = caches[L-1]\n",
     "    grads[\"dA\" + str(L)], grads[\"dW\" + str(L)], grads[\"db\" + str(L)] = \\\n",
     "        linear_activation_backward(dAL, current_cache, \"sigmoid\")\n",
     "    \n",
     "    for l in reversed(range(L-1)):\n",
-    "        j = str(l + 1)\n",
-    "        # lth layer gradients.\n",
     "        current_cache = caches[l]\n",
-    "        grads[\"dA\" + j], grads[\"dW\" + j], grads[\"db\" + j] = \\\n",
+    "        grads[\"dA\" + str(l + 1)], grads[\"dW\" + str(l + 1)], grads[\"db\" + str(l + 1)] = \\\n",
     "            linear_activation_backward(grads[\"dA\" + str(L)], current_cache, \"relu\")\n",
     "\n",
     "    return grads"
@@ -554,11 +555,19 @@
    },
    "outputs": [],
    "source": [
-    "def nn_model(X, Y, n_h, layers_dims, learning_rate=0.0075, num_iterations=1000, mini_batch_size=64,\n",
+    "def nn_model(X, Y, layers_dims, learning_rate=0.0075, num_iterations=1000, mini_batch_size=64,\n",
     "             seed=0, print_cost=False):\n",
     "    \"\"\"\n",
     "    Implements a neural network with relu activation function for the hidden layers and\n",
     "    a sigmoid actication function for the output layer.\n",
+    "    \n",
+    "    Arguments:\n",
+    "    X -- data, numpy array of shape (number of examples, num_px * num_px * 3)\n",
+    "    Y -- true \"label\" vector, of shape (1, number of examples)\n",
+    "    layers_dims -- list containing the input size and each layer size, of length (number of layers + 1).\n",
+    "    learning_rate -- learning rate of the gradient descent update rule\n",
+    "    num_iterations -- number of iterations of the optimization loop\n",
+    "    print_cost -- if True, it prints the cost every 100 steps\n",
     "    \"\"\"\n",
     "    np.random.seed(1)\n",
     "    costs = []\n",
@@ -738,13 +747,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "caches\n",
+      "[((array([[ 4.,  7.],\n",
+      "       [ 2.,  0.]]), array([[ 0.01788628,  0.0043651 ]]), array([[ 0.]])), array([[ 0.08027534,  0.12520399]]))]\n",
       "A_last = [[ 0.52005806  0.53126017]]\n",
       "Length of caches list = 1\n",
       "expected A_last: [[ 0.52005806  0.53126017]]\n",
@@ -767,32 +779,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 288,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "backward_propagation() takes exactly 3 arguments (2 given)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-260-90f1caa47f6b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mparameters\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minitialize_parameters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mA_last\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcaches\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbackward_propagation\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparameters\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"A_last = \"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mA_last\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Length of caches list = \"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcaches\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: backward_propagation() takes exactly 3 arguments (2 given)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'db1': array([[-0.]]), 'dW1': array([[-0., -0.]]), 'dA1': array([[-0.00806972, -0.09111041],\n",
+      "       [-0.0019694 , -0.02223526]])}\n",
+      "expected:\n",
+      "dW1: [[-0. -0.]]\n",
+      "db1: [[-0.]]\n",
+      "dA1: [[-0.00806972 -0.09111041][-0.0019694  -0.02223526]]\n"
      ]
     }
    ],
    "source": [
     "# Test backward_propagation\n",
-    "X = np.array([[ 4.,  7.], [ 2.,  0.]])\n",
-    "parameters = initialize_parameters([2, 1])\n",
+    "Y = np.array([[1, 2]])\n",
+    "A_last = np.array([[ 0.52005806,  0.53126017]])\n",
+    "caches = [((np.array([[ 4.,  7.], [ 2.,  0.]]), np.array([[ 0.01788628,  0.0043651 ]]), np.array([[ 0.]])),\n",
+    "          np.array([[ 0.08027534,  0.12520399]]))]\n",
     "\n",
-    "A_last, caches = backward_propagation(X, parameters)\n",
-    "print(\"A_last = \" + str(A_last))\n",
-    "print(\"Length of caches list = \" + str(len(caches)))\n",
+    "grads =  backward_propagation(A_last, Y, caches)\n",
     "\n",
-    "print(\"expected A_last: [[ 0.52005806  0.53126017]]\")\n",
-    "print(\"expected caches list len: 1\")"
+    "print(grads)\n",
+    "\n",
+    "print(\"expected:\")\n",
+    "print(\"dW1: [[-0. -0.]]\")\n",
+    "print(\"db1: [[-0.]]\")\n",
+    "print(\"dA1: [[-0.00806972 -0.09111041][-0.0019694  -0.02223526]]\")"
    ]
   },
   {
